--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,14 @@ authors = [
     {name = "Pradeepaa001",email = "mpradeepaa2020@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 dependencies = [
-    "google-generativeai (>=0.8.4,<0.9.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)"
+    "google-generativeai",
+    "python-dotenv",
+    "spacy",
+    "pymupdf",
+    "python-docx",
+    "PyPDF2"
 ]
 package-mode = false
 
